--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.2.4",
     "moment": "^2.29.1",
     "next": "12.0.7",
+    "notistack": "^2.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.22.1",
