--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
     "moment": "^2.29.1",
+    "mongodb": "^4.2.2",
     "next": "12.0.7",
     "notistack": "^2.0.3",
     "react": "17.0.2",
